# imagedata_format_pdf

./: MANIFEST.in  README.rst  pyproject.toml  setup.cfg  techstack.md  techstack.yml
.github/workflows/: build_wheels.yml
src/imagedata_format_pdf/: __init__.py  pdfplugin.py
tests/: test_formats_pdf.py
