[build-system]
requires = [
    "setuptools>=75.6.0",
    "wheel",
    "flake8",
    "imagedata>=3.8.0,<3.10"
]
build-backend = "setuptools.build_meta"

[project]
name = "imagedata_format_pdf"
version = "0.0.3"
license-files = [
    "LICENSE.txt",
]
authors = [
    {name = "Erling Andersen", email = "Erling.Andersen@Helse-Bergen.NO"}
]
maintainers = [
    {name = "Erling Andersen", email = "Erling.Andersen@Helse-Bergen.NO"}
]
description = "Imagedata format plugin for reading PDF files as encapsulated PDF"
readme = "README.rst"
requires-python = ">=3.10,<3.15"
keywords = [
    "dicom",
    "python",
    "medical",
    "imaging",
    "pdf"
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Development Status :: 4 - Beta",
    "Environment :: Other Environment",
    "Intended Audience :: Developers",
    "Intended Audience :: Healthcare Industry",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Scientific/Engineering :: Medical Science Apps."
]
dependencies = [
    "setuptools",
    "imagedata>=3.8.13,<3.10",
    "pypdfium2>5.0.0"
]

[project.urls]
Documentation = "https://imagedata.readthedocs.io"
SourceCode = "https://github.com/erling6232/imagedata_format_pdf"
#Changelog = "https://github.com/erling6232/imagedata_format_pdf/CHANGELOG.rst"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.cibuildwheel]
test-requires = "coverage"
test-command = "coverage run -m unittest discover imagedata_format_pdf/tests -t imagedata_format_pdf"

[project.entry-points."imagedata_plugins"]
biffformat = "imagedata_format_pdf.pdfplugin:PDFPlugin"
